fix: add margin to main, text no longer touches edges on mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -35,6 +35,10 @@ body div.navbar {
     }
 }
 
+main {
+    margin-inline: var(--space-xs);
+}
+
 h1 {
     font-size: var(--step-5);
 }
